--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<body>
 		<div id="float-menu-container">
 		<section id="float-menu">
-			<input id="accuracy" type="range" min="0.01" max="0.5" step="0.01" value="0.01">
+			<input id="accuracy" type="range" max="0.5" min="0.01" step="0.01" value="0.01">
 		</section>
 		</div>
 	</body>
